# dig-message

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: compression.rs  constants.rs  envelope.rs  error.rs  lib.rs  registry.rs  replay.rs  seal.rs  stream.rs  transcript.rs
tests/: kat.rs
